# serialtalk

./: LICENSE  sample.json  serialtalk.cabal
src/: ConfigParser.hs  Main.hs
