name:               serialtalk 
version:            0.6.1
synopsis:           Simple serial port scripting tool
homepage:           https://github.com/vasylp/serialtalk
category:           Hardware
author:             Vasyl Pasternak
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.10
build-type:         Simple

executable serialtalk
  build-depends:    base, regex-posix, bytestring, serialport, containers, json, MissingH, HStringTemplate, old-locale, time
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -O3 -threaded
